Correct bug in vignette building

--- a/vignettes/general.Rmd
+++ b/vignettes/general.Rmd
@@ -8,7 +8,7 @@ output:
     toc_depth: 2
 header-includes: \usepackage{tabularx}
 vignette: |
-  %\VignetteIndexEntry{Shiny_modules_usage}
+  %\VignetteIndexEntry{Shiny modules usage}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 ---
